k8s/rendered.yaml
---
# Source: streamingapp/templates/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - port: 3003
      targetPort: 3003

---
# Source: streamingapp/templates/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - port: 3001
      targetPort: 3001

---
# Source: streamingapp/templates/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: chat
  ports:
    - port: 3004
      targetPort: 3004

---
# Source: streamingapp/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80

---
# Source: streamingapp/templates/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017

---
# Source: streamingapp/templates/streaming-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: streaming
  ports:
    - port: 3002
      targetPort: 3002

---
# Source: streamingapp/templates/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: streamingapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: "zeeshan733/streaming-admin:1.0.0"
          ports:
            - containerPort: 3003
          readinessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
# Source: streamingapp/templates/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: streamingapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: "zeeshan733/streaming-auth:1.0.0"
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
# Source: streamingapp/templates/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: streamingapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: "zeeshan733/streaming-chat:1.0.0"
          ports:
            - containerPort: 3004
          readinessProbe:
            tcpSocket:
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3004
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
# Source: streamingapp/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: streamingapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "zeeshan733/streaming-frontend:1.0.0"
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

---
# Source: streamingapp/templates/streaming-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming
  namespace: streamingapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: streaming
  template:
    metadata:
      labels:
        app: streaming
    spec:
      containers:
        - name: streaming
          image: "zeeshan733/streaming-stream:1.0.0"
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3002
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
# Source: streamingapp/templates/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: streamingapp
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: "mongo:6"
          ports:
            - containerPort: 27017
              name: mongo
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi

---
# Source: streamingapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamingapp
  namespace: streamingapp
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: streamingapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api/streaming
            pathType: Prefix
            backend:
              service:
                name: streaming
                port:
                  number: 3002

          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 3003

          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: chat
                port:
                  number: 3004

          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: chat
                port:
                  number: 3004


---
# Source: streamingapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamingapp-auth
  namespace: streamingapp
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  ingressClassName: nginx
  rules:
    - host: streamingapp.local
      http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth
                port:
                  number: 3001
